--- a/backup/css/app.bundle.css
+++ b/backup/css/app.bundle.css
@@ -145,23 +145,15 @@ h6 {
   margin-top: 20px;
   margin-bottom: 10px;
 }
-::-webkit-scrollbar {
-  display: none;
-}
 
 /*!***************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/App.css ***!
   \***************************************************************/
 .app-container {
-  background-color: #ed1d23;
-  /* width: 100%;
-  min-height: 100vh; */
-  height: 100vh;
-  overflow-y: scroll;
-  display: flex;
-  flex-direction: column;
+    background-color: #ed1d23;
+    width: 100%;
+    min-height: 100vh;
 }
-
 /*!**********************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/Components/FormPedidos.css ***!
   \**********************************************************************************/
@@ -169,7 +161,7 @@ h6 {
   position: absolute;
   display: flex;
   width: 100%;
-  height: 200%;
+  height: 100vh;
   background-color: rgba(36, 36, 36, 0.281);
   z-index: 1000;
   justify-content: center;
@@ -469,146 +461,97 @@ h6 {
 /*!**********************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/Layout/ModalEncabezado.css ***!
   \**********************************************************************************/
-.encabezado-fondo {
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.726);
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  z-index: 1000;
-  animation-name: opac;
-  animation-duration: 1s;
+.encabezado-fondo{
+    position:absolute;
+    background-color: rgba(0, 0, 0, 0.726);
+    width: 100%;
+    height: 100vh;
+    top:0;
+    z-index: 1000;
+    animation-name: opac;
+    animation-duration: 1s;
 }
 @keyframes opac {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 .encabezado-fondo.cerrando {
-  animation-name: cerrando;
-  animation-duration: 1s;
+    animation-name: cerrando;
+    animation-duration: 1s;
 }
 @keyframes cerrando {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
-.encabezado-container {
-  position: relative;
-  width: 80%;
-  left: 10%;
-  height: calc(100vh - 150px);
-  top: 80px;
-  padding-top: 20px;
-  background-color: antiquewhite;
-  overflow-y: scroll;
+.encabezado-container{
+    position: relative;
+    width: 80%;
+    left: 10%;
+    height: calc(100vh - 200px);
+    top: 80px;
+    padding-top: 20px;
+    background-color: antiquewhite;
 }
 
 .encabezado-container button {
-  position: fixed;
-  right: calc(10% + 20px);
-  width: 30px;
-  height: 30px;
-  border-radius: 3px;
-  background-color: #ed1d23;
-  color: antiquewhite;
-  font-size: 20px;
-  padding-bottom: 10px;
-  border: none;
-  z-index: 110;
-}
-.encabezado-container button:hover {
-  cursor: pointer;
+    position: fixed;
+    right: calc(10% + 20px);
+    width: 30px;
+    height: 30px;
+    border-radius: 3px;
+    background-color: #ed1d23;
+    color:antiquewhite;
+    font-size: 20px;
+    padding-bottom: 10px;
+    border: none;
+    z-index: 110;
 }
 .encabezado-textos {
-  position: relative;
-  top: 0px;
-  height: 95%;
-  overflow-y: scroll;
+    position: relative;
+    top: 0px;
+    height: 95%;
+    overflow-y: scroll;
 }
 .encabezado-textos h2 {
-  margin: 0 20px;
-  font-size: 26px;
+    margin: 0 20px;
+    font-size: 28px;
 }
 .encabezado-textos h3 {
-  margin: 0 18px;
+    margin: 0 20px;
 }
 .encabezado-textos p {
-  margin: 20px;
+    margin: 20px;
 }
 
 @media screen and (min-width: 600px) {
-  .encabezado-fondo {
-    display: flex;
-    align-items: center;
-  }
-  .encabezado-container {
-    top: inherit;
-    position: relative;
-    width: 60%;
-    left: 20%;
-    padding-bottom: 40px;
-    height: auto;
-  }
-  .encabezado-textos {
-    overflow-y: visible;
-  }
-  .encabezado-container button {
-    right: calc(20% + 20px);
-  }
+    .encabezado-container{
+        position: relative;
+        width: 60%;
+        left: 20%;
+    }
+    .encabezado-textos {
+        overflow-y: visible;
+    }
+    .encabezado-container button {
+        right: calc(20% + 20px);
+    }
 }
 
-@media screen and (min-width: 1400px) {
-  .encabezado-container {
-    width: 40%;
-    left: 30%;
-  }
-  .encabezado-fondo button {
-    right: calc(30% + 20px);
-  }
-}
 
 /*!****************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/Secciones/Audios.css ***!
   \****************************************************************************/
 .elAudio-container {
-  margin: 10px 30px 20px 30px;
+    margin: 10px 20px 20px 30px;
 }
-.audio-tag {
-  filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%);
-  width: 100%;
-  height: 40px;
-  margin-bottom: 10px;
-  margin-top: 10px;
-}
-.elAudio-container p {
-  font-size: 14px;
-}
-@media screen and (min-width: 600px) {
-  .audio-tag {
-    width: 70%;
-  }
-  .elAudio-container {
-    margin: 20px 30px 20px 0px;
-  }
-}
-@media screen and (min-width: 1300px) {
-  .audio-tag {
-    width: 50%;
-  }
-}
-@media screen and (min-width: 1500px) {
-  .audio-tag {
-    width: 40%;
-  }
-}
-
 /*!**************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/Secciones/Arte.css ***!
   \**************************************************************************/
@@ -666,37 +609,22 @@ h6 {
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/Layout/ElPdf.css ***!
   \************************************************************************/
 .elPdf-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  z-index: 700;
-  top: 0;
+    position: absolute;
+    width: 90%;
+    height: 80vh;
+    top: -20vh;
+    left: 5%;
+    margin: 0;
+    z-index: 700;
 }
 .elPdf-iframe {
-  position: relative;
-  top: 0;
-  left: 5%;
-  width: 90%;
-  height: 60vh;
-  z-index: 800;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 800;
 }
 .elPdf-cerrar {
-  position: absolute;
-  /* right: calc(10% + 20px); */
-  left: 30px;
-  top: 15px;
-  width: 30px;
-  height: 30px;
-  border-radius: 3px;
-  background-color: #ed1d23;
-  color: antiquewhite;
-  font-size: 20px;
-  padding-bottom: 10px;
-  border: none;
-  z-index: 1000;
-
-  /* position: absolute;
+    position: absolute;
     background-color: #ed1d23;
     color: #fff;
     font-size: 30px;
@@ -707,124 +635,71 @@ h6 {
     height: 40px;
     z-index: 900;
     border: none;
-    border-radius: 5px; */
+    border-radius: 5px;
 }
-.elPdf-cerrar:hover {
-  cursor: pointer;
+.elPdf-cerrar:hover{
+    cursor: pointer;
 }
 
 @media screen and (min-width: 600px) {
-  .elPdf-iframe {
-    position: relative;
-    top: 120px;
-    width: 100%;
-    height: 500px;
-  }
-  /* .elPdf-cerrar {
-    position: absolute;
-    top: 550px;
-    right: 0;
-  } */
-}
 
+    .elPdf-iframe {
+        position: relative;
+        top: 120px;
+        width: 100%;
+        height: 500px;
+    }
+    .elPdf-cerrar {
+        position: absolute;
+        top: 550px;
+        right: 0;
+    }
+}
 /*!********************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/Secciones/Santuarios.css ***!
   \********************************************************************************/
+/* .image-gallery {
+  background-color: aquamarine;
+}
+
+.image-gallery-content {
+  height: 100px;
+} */
+
 .gallery-itemDescription {
   font-size: 14px;
   line-height: 14px;
 }
 .gallery-descripciones-container {
-  margin: 10px 10px 20px 30px;
-}
-
-.imagenGrande-container {
-  position: fixed;
-  display: grid;
-  place-items: center;
-  background-color: rgba(7, 7, 7, 0.7);
-  top: 0px;
-  left: 0px;
-  width: 100vw;
-  height: 100vh;
-  z-index: 1000;
-}
-
-.imagenGrande {
-  width: 100%;
-  /* height: 80vh; */
-}
-
-.boton-agrandar {
-  position: fixed;
-  bottom: -20px;
-  width: 100px;
-  left: calc(50% - 50px);
-  z-index: 10000;
-}
-
-.cerrar-agrandar {
-  position: fixed;
-  right: 20px;
-  top: 20px;
-  width: 30px;
-  height: 30px;
-  border-radius: 3px;
-  background-color: #ed1d23;
-  color: antiquewhite;
-  font-size: 20px;
-  padding-bottom: 10px;
-  border: none;
-  z-index: 110;
+  margin: 20px 10px 10px 30px;
 }
 
 @media screen and (min-width: 600px) {
   .gallery-descripciones-container {
     margin: 10px 10px 10px 60px;
   }
-  .imagenGrande {
-    width: auto;
-    height: 80vh;
-  }
-  .cerrar-agrandar {
-    position: fixed;
-    right: 20px;
-    top: 20px;
-    width: 30px;
-    height: 30px;
-    border-radius: 3px;
-    background-color: #ed1d23;
-    color: antiquewhite;
-    font-size: 20px;
-    padding-bottom: 10px;
-    border: none;
-    z-index: 110;
-  }
-  .boton-agrandar {
-    height: 40px;
-    font-size: 20px;
-    line-height: 20px;
-  }
 }
 
 /*!***************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/Secciones/Altar.css ***!
   \***************************************************************************/
+
 .altar-container {
-  position: relative;
-  width: 100%;
-  height: calc(100% - 100px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    position: relative;
+    width: 100%;
+    height: calc(100% - 100px);
+    /*left: 200px;
+    top: 40px;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.altar-container:hover {
-  cursor: pointer;
+.altar-container:hover{
+    cursor: pointer;
 }
-.pent1,
-.pent2 {
-  position: absolute;
-  width: 200px;
+.pent1, .pent2 {
+    position: absolute;
+    width: 200px;
 }
 .gaucho {
   position: absolute;
@@ -832,160 +707,100 @@ h6 {
   margin-top: 40px;
 }
 .botones-container {
-  position: relative;
-  width: 86%;
-  left: 7%;
-  bottom: 35px;
-  height: 40px;
-  top: 70px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    position: relative;
+    /*width: calc(100% - 20px);*/
+    width: 80%;
+    left: 10%;
+    bottom: 35px;
+    height: 40px;
+    top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .instrucciones {
-  font-weight: 400;
-  font-size: 14px;
-}
-@media screen and (min-width: 350px) {
-  .instrucciones {
+    font-weight: 400;
     font-size: 16px;
-  }
 }
 .button-30 {
-  align-items: center;
-  appearance: none;
-  background-color: #fcfcfd;
-  border-radius: 4px;
-  border-width: 0;
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
-    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
-  box-sizing: border-box;
-  color: #1d1d1d;
-  cursor: pointer;
-  font-weight: 600;
-  display: inline-flex;
-  height: 48px;
-  justify-content: center;
-  line-height: 1;
-  list-style: none;
-  overflow: hidden;
-  padding-left: 16px;
-  padding-right: 16px;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transition: box-shadow 0.15s, transform 0.15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  will-change: box-shadow, transform;
-  font-size: 18px;
-  margin-right: 0px;
-  z-index: 400;
-}
-
-.button-30:focus {
-  box-shadow: #d6d6e7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
-    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
-}
-
-.button-30:hover {
-  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px,
-    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
-  transform: translateY(-2px);
-}
-
-.button-30:active {
-  box-shadow: #d6d6e7 0 3px 7px inset;
-  transform: translateY(2px);
-}
-.pent1.active {
-  filter: drop-shadow(0 0 40px #ffe600);
-  transition: filter 2s;
-}
-
-@media screen and (min-width: 600px) {
-  .altar-container {
-    position: relative;
-    top: 40px;
-    width: 100%;
-    height: 300px;
-  }
-  .pent1,
-  .pent2 {
-    position: absolute;
-    width: 200px;
-  }
-  .gaucho {
-    position: absolute;
-    width: 180px;
-  }
-  .botones-container {
-    position: relative;
-    display: flex;
+    align-items: center;
+    appearance: none;
+    background-color: #FCFCFD;
+    border-radius: 4px;
+    border-width: 0;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #1d1d1d;
+    cursor: pointer;
+    font-weight: 600;
+    display: inline-flex;
+    height: 48px;
     justify-content: center;
-    top: 50px;
-    height: 50px;
-    gap: 20px;
-    margin: 0;
-  }
-  .instrucciones {
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    padding-left: 16px;
+    padding-right: 16px;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transition: box-shadow .15s,transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow,transform;
     font-size: 18px;
+    margin-right: 0px;
+    z-index: 400;
   }
-}
+  
+  .button-30:focus {
+    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  }
+  
+  .button-30:hover {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    transform: translateY(-2px);
+  }
+  
+  .button-30:active {
+    box-shadow: #D6D6E7 0 3px 7px inset;
+    transform: translateY(2px);
+  }
+  .pent1.active {
+    filter: drop-shadow(0 0 40px #ffe600);
+    transition: filter 2s;
+  }
 
-
-@media screen and (min-width: 1300px) {
-  .altar-container {
-    height: 600px;
+  @media screen and (min-width: 600px) {
+    .altar-container {
+      position: relative;
+      top: 40px;
+      width: 100%;
+      height: 300px;
+    }
+    .pent1, .pent2 {
+      position: absolute;
+      width: 200px;
+    }
+    .gaucho {
+      position: absolute;
+      width: 180px;
+    }
+    .botones-container {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      top: 50px;
+      height: 50px;
+      gap: 20px;
+      margin: 0;
+    }
+    .instrucciones {
+        font-size: 18px;
+    }
   }
-  .pent1,
-  .pent2 {
-    width: 300px;
-  }
-  .gaucho {
-    width: 280px;
-  }
-}
-
-/*pisando*/
-@media screen and (min-width: 900px) {
-  .altar-container {
-    height: 350px;
-  }
-  .pent1,
-  .pent2 {
-    width: 200px;
-  }
-  .gaucho {
-    width: 180px;
-  }
-}
-@media screen and (min-width: 1100px) {
-  .altar-container {
-    height: 400px;
-  }
-  .pent1,
-  .pent2 {
-    width: 250px;
-  }
-  .gaucho {
-    width: 200px;
-  }
-}
-@media screen and (min-width: 1400px) {
-  .altar-container {
-    height: 600px;
-  }
-  .pent1,
-  .pent2 {
-    width: 350px;
-  }
-  .gaucho {
-    width: 300px;
-  }
-}
 /*!*****************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/Components/Pedido.css ***!
   \*****************************************************************************/
@@ -1024,7 +839,7 @@ h6 {
   padding: 10px 0;
   overflow-y: hidden;
   position: absolute;
-  top: 0px;
+  top: -20px;
   left: calc(50% - 120px);
   animation: display ease;
   display: flex;
@@ -1059,122 +874,93 @@ h6 {
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/Components/Pedidos.css ***!
   \******************************************************************************/
 .pedidos-container {
-  position: absolute;
-  height: 200px;
-  width: 100%;
-  bottom: -10px;
-  display: flex;
-  justify-content: end;
+    position: absolute;
+    height: 200px;
+    width: 100%;
+    bottom: -10px;
+    text-align: center;
 }
+
 .test {
-  display: none;
-}
-.pedido-textoContainer {
-  position: relative;
-  width: 85%;
-  margin-left: 15px;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-.pedido-fecha {
-  margin: 0;
-  margin-bottom: 10px;
-}
-.pedido-texto {
-  margin: 0;
-}
-.pedido-ofrenda {
-  position: relative;
-  width: 15%;
-  margin-right: 10px;
+    display: none;
 }
 
 @media screen and (min-width: 600px) {
-  .pedidos-container {
-    position: absolute;
-    width: 100%;
-    height: 500px;
-    right: 0px;
-    left: 0px;
-    /*background-color: blueviolet;*/
-    top: calc(50vh - 150px);
-    margin: 0;
-    overflow: hidden;
-  }
-}
+    .pedidos-container {
+        position: absolute;
+        width: 200px;
+        height: 400px;
+        right: -200px;
+        /*background-color: blueviolet;*/
+        top: calc(50vh - 250px);
+        margin: 0;
+      overflow: hidden;
+    }
 
-@media screen and (min-width: 1200px) {
-  .pedidos-container {
-    width: 100%;
-    height: 500px;
-    right: 0px;
-    left: 0px;
-    top: calc(50vh - 0px);
-    margin: 0;
-    overflow: hidden;
-  }
+    
 }
-
+  
 /*!***********************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/Layout/Home.css ***!
   \***********************************************************************/
 .home-container {
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  /* overflow: hidden; */
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    overflow: hidden;
 }
 .titulo-container {
-  position: relative;
-  top: 25px;
-  width: 100%;
+    position:relative;
+    top: 25px;
+    width: 100%;
 }
 .titulo-container:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 .titulo {
-  margin: 0;
-  text-align: center;
-  font-size: 40px;
-  font-weight: 800;
-  color: #fff;
+    margin: 0;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    color: #fff;
 }
 .secciones-container {
-  position: relative;
-  width: 100%;
-  /*width: calc(100% -  60px);*/
-  /*margin-right:200px;*/
-  /*margin-top: 30px;*/
-  height: calc(100vh - 260px);
+    position: relative;
+    width: 100%;
+    /*width: calc(100% -  60px);*/
+    /*margin-right:200px;*/
+    /*margin-top: 30px;*/
+    height: calc(100vh - 260px);
 }
-.tituloSeccion-container {
-  position: relative;
-  margin-left: 30px;
+.tituloSeccion-container{
+    position: relative;
+    margin-left: 30px;
 }
 .tituloSeccion {
-  font-size: 30px;
-  color: #fff;
+    font-size: 30px;
+    color: #fff;
 }
 
 @media screen and (min-width: 600px) {
-  .titulo {
-    font-size: 70px;
-  }
-  .titulo-container {
-    top: 30px;
-    left: calc(50% - 250px);
-    width: 500px;
-  }
-  .secciones-container {
-    position: absolute;
-    width: calc(100vw - 500px);
-    left: 250px;
-    top: 120px;
-    margin-left: 0px;
-  }
-  .tituloSeccion-container {
-    margin-left: 60px;
-  }
+    .titulo {
+        font-size: 70px;
+    }
+    .titulo-container {
+        top: 30px;
+        left: calc(50% - 250px);
+        width: 500px;
+    }
+    .secciones-container {
+        position: absolute;
+        width: calc(100vw - 500px);
+        left: 250px;
+        top: 120px;
+        margin-left: 0px;
+    }
+    .tituloSeccion-container {
+        margin-left: 60px;
+    }
 }
+
+
 
