--- a/src/Components/FormPedidos.css
+++ b/src/Components/FormPedidos.css
@@ -2,7 +2,7 @@
   position: absolute;
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 200%;
   background-color: rgba(36, 36, 36, 0.281);
   z-index: 1000;
   justify-content: center;
