--- a/src/Secciones/Altar.css
+++ b/src/Secciones/Altar.css
@@ -123,6 +123,7 @@
   }
 }
 
+
 @media screen and (min-width: 1300px) {
   .altar-container {
     height: 600px;
@@ -133,5 +134,43 @@
   }
   .gaucho {
     width: 280px;
+  }
+}
+
+/*pisando*/
+@media screen and (min-width: 900px) {
+  .altar-container {
+    height: 350px;
+  }
+  .pent1,
+  .pent2 {
+    width: 200px;
+  }
+  .gaucho {
+    width: 180px;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .altar-container {
+    height: 400px;
+  }
+  .pent1,
+  .pent2 {
+    width: 250px;
+  }
+  .gaucho {
+    width: 200px;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .altar-container {
+    height: 600px;
+  }
+  .pent1,
+  .pent2 {
+    width: 350px;
+  }
+  .gaucho {
+    width: 300px;
   }
 }
